--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 	 <link rel="profile" href="https://gmpg.org/xfn/11"> 
-	 <title>RadioActive</title>
+	 <title>BarbellAthletics</title>
 <meta name="robots" content="max-image-preview:large">
 <link rel="dns-prefetch" href="//fonts.googleapis.com">
 <link rel="alternate" type="application/rss+xml" title="RadioActive &raquo; Kanał z wpisami" href="https://mieszkobiernacki.github.io/preViewBA12.11/feed/">
