--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ flexibility(document.documentElement);
 				<div class="elementor-element elementor-element-162e7e7 elementor-widget-mobile__width-initial elementor-invisible elementor-widget elementor-widget-button" data-id="162e7e7" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInRight&quot;}" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://rafcykol.github.io/praktyka_p/?page_id=1270#038;preview=true">
+			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://rafcykol.github.io/praktyka_p/o-mnie">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-text">Czytaj więcej</span>
 		</span>
