--- a/o-mnie-2/index.html
+++ b/o-mnie-2/index.html
@@ -5,9 +5,7 @@
 		<meta http-equiv="refresh" content="0;url=https://rafcykol.github.io/praktyka_p/o-mnie-2-2/">
 	</head>
 	<body>
-		<script type="text/javascript">
-			window.location = "https://rafcykol.github.io/praktyka_p/o-mnie-2-2/";
-		</script>
+		<script type="text/javascript">window.location = "https://rafcykol.github.io/praktyka_p/o-mnie-2-2/";</script>
 
 		<p>You are being redirected to <a href="https://rafcykol.github.io/praktyka_p/o-mnie-2-2/">https://rafcykol.github.io/praktyka_p/o-mnie-2-2/</a></p>
 	</body>
